--- a/todo/todoapp/templates/partials/_footer.html
+++ b/todo/todoapp/templates/partials/_footer.html
@@ -1,7 +1,11 @@
-{% extends 'home.html' %}
+{% extends 'layout.html' %}
+
+
 <footer>
-  <div class="container">
-    <p>&copy; {{ current_year }} - Simple Django Todo App</p>
-  </div>
+    <div class="container">
+        <p>&copy; {{ current_year }} - Simple Django Todo App</p>
+    </div>
 </footer>
+
+
 
