--- a/todo/todoapp/templates/layout.html
+++ b/todo/todoapp/templates/layout.html
@@ -6,13 +6,15 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<img id= 'iamge-id' src="https://cdn.iconscout.com/icon/free/png-512/django-2-282855.png" alt="Django App">
-	    <title>Todo App - Home</title>
+		<title>Todo App - Home</title>
 	</head>
 	<body>	
 		<section class='face'>
 			
 			<main>{% block content %} {% endblock %}</main>
+
+			{% include 'partials/_footer.html' %}
+			
 		
 		</section>
 	</body>
