--- a/todo/todoapp/templates/todo_create.html
+++ b/todo/todoapp/templates/todo_create.html
@@ -7,7 +7,7 @@
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Save</button>
+        <button  type="submit" > <a href= "{% url 'todo-list' %}"> Save </a></button>
     </form>
 </main>
 {% endblock %}
